--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# env files
+.env*
 # local env files
 .env*.local
 
@@ -34,3 +36,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# JetBrains IDEs
+.idea
