--- a/.github/workflows/balance.yaml
+++ b/.github/workflows/balance.yaml
@@ -7,7 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Call our API route
+        env:
+          API_SECRET_KEY: ${{ secrets.API_SECRET_KEY }}
         run: |
           curl --request POST \
           --url 'https://serverless-functions-kohl.vercel.app/api/young/wallet/balance' \
-          --header 'Authorization: Bearer ${{ secrets.API_SECRET_KEY }}'
+          --header 'Authorization: Bearer $env:API_SECRET_KEY'
