--- a/.github/workflows/balance.yaml
+++ b/.github/workflows/balance.yaml
@@ -1,7 +1,7 @@
 name: daily-wallet-balance
 on:
   schedule:
-    - cron: '*/5 * * * *'
+    - cron: '0 1 * * *'
 jobs:
   cron:
     runs-on: ubuntu-latest
