--- a/.github/workflows/recurringOrderBTC.yaml
+++ b/.github/workflows/recurringOrderBTC.yaml
@@ -2,12 +2,12 @@ name: recurring-order-BTC
 on:
   schedule:
 #    - cron: '0 9 1 * *'
-    - cron: '*/5 * * * *'
+    - cron: '0 1 * * *'
 jobs:
   cron:
     runs-on: ubuntu-latest
     env:
-      VOLUME: 25
+      VOLUME: 12
     steps:
       - name: Call order API
         run: |
