--- a/.github/workflows/recurringOrderBTC.yaml
+++ b/.github/workflows/recurringOrderBTC.yaml
@@ -1,8 +1,7 @@
 name: recurring-order-BTC
 on:
   schedule:
-#    - cron: '0 9 1 * *'
-    - cron: '0 1 * * *'
+    - cron: '0 2 1,15 * *'
 jobs:
   cron:
     runs-on: ubuntu-latest
