chore(gh-action): add auth

--- a/.github/workflows/currencies.yaml
+++ b/.github/workflows/currencies.yaml
@@ -8,7 +8,8 @@ jobs:
       - name: Call currencies API
         run: |
           curl --request POST \
-          --url 'https://serverless-functions-kohl.vercel.app/api/young/currencies/currencies'
+          --url 'https://serverless-functions-kohl.vercel.app/api/young/currencies/currencies' \
+          --header 'Authorization: Bearer ${{ secrets.API_SECRET_KEY }}'
       - name: Send email
         uses: dawidd6/action-send-mail@v3.7.1
         with:
