--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
-    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.1.1",
-    "@types/nodemailer": "^6.4.7"
+    "@types/crypto-js": "^4.1.1"
   }
 }
