--- a/.github/workflows/share.yaml
+++ b/.github/workflows/share.yaml
@@ -5,48 +5,31 @@ on:
 
 jobs:
   job_1:
-    name: Add 3 and 7
+    name: Get currencies
     runs-on: ubuntu-latest
     steps:
       - shell: bash
         run: |
-          expr 3 + 7 > math-homework.txt
+          curl --request POST \
+          --url 'https://serverless-functions-kohl.vercel.app/api/young/currencies/currencies' \
+          --header 'Authorization: Bearer ${{ secrets.API_SECRET_KEY }}' > currencies.txt
       - name: Upload math result for job 1
         uses: actions/upload-artifact@v3
         with:
-          name: homework
-          path: math-homework.txt
+          name: currencies
+          path: currencies.txt
 
   job_2:
-    name: Multiply by 9
+    name: Display results
     needs: job_1
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Download math result for job 1
         uses: actions/download-artifact@v3
         with:
-          name: homework
-      - shell: bash
-        run: |
-          value=`cat math-homework.txt`
-          expr $value \* 9 > math-homework.txt
-      - name: Upload math result for job 2
-        uses: actions/upload-artifact@v3
-        with:
-          name: homework
-          path: math-homework.txt
-
-  job_3:
-    name: Display results
-    needs: job_2
-    runs-on: macOS-latest
-    steps:
-      - name: Download math result for job 2
-        uses: actions/download-artifact@v3
-        with:
-          name: homework
+          name: currencies
       - name: Print the final result
         shell: bash
         run: |
-          value=`cat math-homework.txt`
-          echo The result is $value
+          value=`cat currencies.txt`
+          echo The result is: $value
